# tumblrbot

./: .gitignore  4tv_tumblrbot.py  README.md  Sample .env  Sample .env.toml  __main__.py  build.fish  build.ps1  common.py  config.ini  config.toml  create_training_data.py  custom_prompts.jsonl  generation.py  pyproject.toml  requirements.txt  run.ps1  sample_custom_prompts.jsonl  settings.py  setup.bat  setup.sh  special_word_generator.py  special_words.json  tokens.py  training.py  tumblr.py
.github/: FUNDING.yml
.github/workflows/: python-publish.yml
src/: common.py  generation.py  settings.py  training.py
src/tumblrbot/: __main__.py  common.py  generation.py  training.py  tumblr.py
src/tumblrbot/actions/: base.py  download.py  examples.py  fine_tune.py  generate.py
src/tumblrbot/flow/: download.py  examples.py  fine_tune.py  generate.py
src/tumblrbot/settings/: config.py  tokens.py
src/tumblrbot/steps/: base.py  download.py  examples.py  fine_tune.py  generate.py
src/tumblrbot/utils/: __init__.py  common.py  config.py  models.py  settings.py  tumblr.py
tumblrbot/: download.py  examples.py  fine_tune.py  fine_tuning.py  generate.py  generation.py  models.py  openai_utils.py  settings.py  training.py  tumblr.py  tumblr_utils.py  utils.py
tumblrbot/flow/: download.py  examples.py  fine_tune.py  generate.py
tumblrbot/utils/: common.py  models.py  settings.py  tumblr.py
typings/authlib/integrations/httpx_client/: __init__.pyi  oauth2_client.pyi
typings/currency_converter/: __init__.pyi  currency_converter.pyi
typings/pytumblr/: __init__.pyi  request.pyi
typings/questionary/: question.py  question.pyi
typings/questionary/prompts/: checkbox.pyi  common.py  common.pyi  confirm.py  password.py  select.py  select.pyi  text.py
typings/tumblr_backup/: is_reblog.pyi  main.pyi  note_scraper.pyi  util.pyi  wget.pyi
