[project]
name = "tumblrbot"
description = "An updated bot that posts to Tumblr, based on your very own blog!"
readme = "README.md"
requires-python = ">= 3.13"
license = "Unlicense"
license-files = ["UNLICENSE"]
dependencies = [
  "CacheControl",
  "openai",
  "pydantic",
  "pydantic-settings",
  "requests-oauthlib",
  "rich",
  "tiktoken",
  "tomlkit",
]
dynamic = ["version"]

[project.urls]
Issues = "https://github.com/MaidThatPrograms/tumblrbot/issues"
Repository = "https://github.com/MaidThatPrograms/tumblrbot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
