[project]
name = "tumblrbot"
version = "2.0.0"
description = "An updated bot that posts to Tumblr, based on your very own blog!"
readme = "README.md"
requires-python = ">= 3.14"
dependencies = [
  "CurrencyConverter",
  "openai",
  "pydantic",
  "questionary",
  "requests",
  "requests-oauthlib",
  "rich",
  "tenacity",
  "tiktoken",
  "tomlkit"
]

[project.urls]
Funding = "https://ko-fi.com/maidscientistizutsumimarin"
Source = "https://github.com/MaidScientistIzutsumiMarin/tumblrbot"

[project.scripts]
tumblrbot = "tumblrbot.__main__:main"

[tool.uv]
package = true
